# QuickMenuReborn

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ExportHandler.emd  ExportHandler.yml  QuickMenuReborn.emd  QuickMenuReborn.yml  QuickMenuRebornSample.emd  README.md  exporter.py  exports.emd  exports.yml  main.c  out.txt  param.sfx  param.yml  usage.md
resource/: qmr_plugin.rco
resource/src/: qmr_plugin.xml
sample_plugin/: CMakeLists.txt
sample_plugin/src/: main.c
src/: event_handler.cpp  ez_widgets.cpp  linkedList.cpp  main.cpp  main.h  types.cpp  widgets.cpp  widgets.h
src/export_handler/: export_handler_internal.h  main.c
src/quickmenureborn/: c_types.h  qm_reborn.h
src/sample_app/: main.c
src/user/: common.hpp  config_mgr.cpp  config_mgr.h  default_handlers.cpp  default_handlers.h  event_handler.cpp  event_handler.hpp  export_handler.cpp  ez_widgets.cpp  linkedList.cpp  linkedList.hpp  main.cpp  main.h  types.cpp  types.h  utils.cpp  utils.hpp  widgets.cpp  widgets.h  widgets.hpp
src/user/quickmenureborn/: c_types.h
